--- a/Tienda/src/main/resources/static/index.html
+++ b/Tienda/src/main/resources/static/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>tienda</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <<h1>Pagina inicial</h1>
-    </body>
+<head>
+<title>Tienda</title>
+</head>
+<body>
+
+<h1>Tienda Bryan Orozco</h1>
+<p>¡Bienvenido a nuestra tienda online! Nos complace presentarte un nuevo mundo de posibilidades al alcance de un clic. En nuestra tienda, encontrarás una amplia variedad de productos cuidadosamente seleccionados para satisfacer tus necesidades y deseos. Desde artículos de moda y accesorios elegantes hasta productos para el hogar y gadgets innovadores, nuestro catálogo está repleto de opciones que te sorprenderán. Además, nuestra plataforma de compras online garantiza una experiencia fácil y segura, con envíos rápidos y atención al cliente excepcional. Ya sea que estés buscando regalos únicos o simplemente quieras darte un capricho, aquí encontrarás todo lo que necesitas para hacer de cada día algo especial. ¡Explora nuestra tienda online y déjate llevar por la emoción de descubrir productos que mejorarán tu vida y te harán sonreír!</p>
+
+</body>
 </html>
