--- a/Tienda/src/main/resources/static/index.html
+++ b/Tienda/src/main/resources/static/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tienda</title>
+  <title>Tienda</title>
+  <link rel="stylesheet" href="myStyle.css">
 </head>
 <body>
 
@@ -10,3 +11,4 @@
 
 </body>
 </html>
+
